Chris Pearce - Bug 479859 - Implement new new load algorithm r+ doublec sr+ roc.